--- a/app/src/main/res/layout/fragment4.xml
+++ b/app/src/main/res/layout/fragment4.xml
@@ -24,14 +24,6 @@
         android:layout_marginTop="58dp"
         app:srcCompat="@drawable/mike" />
 
-    <SeekBar
-        android:id="@+id/seekBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/section_number"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="95dp" />
-
     <RatingBar
         android:id="@+id/ratingBar"
         android:layout_width="wrap_content"
@@ -39,4 +31,13 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="21dp" />
+
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/section_number"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="49dp"
+        android:text="Gwen" />
 </RelativeLayout>
